public class SistemaAntigo {
    public void realizarPagamento(double valor) {
        System.out.println("Pagamento de R$" + valor + " processado no sistema antigo.");
    }
}
