package A08_ARA0075_PPS_NA.aula07.adapter;

public interface Pagamento {
    void pagar(double valor);
}
